# ace-step-rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md  ace-step-gen.service  celebration.txt
.github/workflows/: ci.yml
examples/: bench_conv_all.rs  bench_conv_transpose.rs  bench_text_encoder.rs  bench_vae.rs  compare.rs  generate.rs  generation_daemon.rs  load_weights.rs  radio_daemon.rs  stream.rs  stream_cli.rs  stream_daemon.rs
scripts/: bench_python.py  dump_intermediates.py
skills/generate_music/: SKILL.md
src/: audio.rs  config.rs  error.rs  lib.rs  manager.rs  model.rs  pipeline.rs  radio.rs  scheduler.rs  streaming.rs  vae.rs
src/audio/: mel.rs  mp3.rs  ogg.rs  wav.rs
src/model/: dcae.rs  encoder.rs  generation.rs  lm_planner.rs  tokenizer.rs  transformer.rs  vocoder.rs
src/model/encoder/: condition.rs  conformer.rs  lyric.rs  lyric_tokenizer.rs  text.rs  timbre.rs
src/model/tokenizer/: detokenizer.rs  fsq.rs  pooler.rs
src/model/transformer/: attention.rs  config.rs  dit.rs  glumbconv.rs  layers.rs  mask.rs  patch_embed.rs  rope.rs  timestep.rs
src/scheduler/: euler.rs  heun.rs  pingpong.rs
