[package]
name = "ace-step-rs"
version = "0.2.0"
edition = "2024"
description = "ACE-Step v1.5 music generation in pure Rust via candle"
license = "MIT"
repository = "https://github.com/marenz/ace-step-rs"

[dependencies]
# ML framework (local candle fork with matmul+col2im ConvTranspose1d + optional cuDNN)
candle-core = { path = "/home/marenz/repos/candle/candle-core" }
candle-nn = { path = "/home/marenz/repos/candle/candle-nn" }
candle-transformers = { path = "/home/marenz/repos/candle/candle-transformers" }

# Tokenization (Qwen3 tokenizer)
tokenizers = "0.21"

# Audio I/O
hound = "3.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"

# Random number generation
rand = "0.9"

# Model downloads
hf-hub = "0.4"

# Float16
half = "2"

# Numerical traits
num-traits = "0.2"

# Zip archive reading (for loading .pt files)
zip = "2"

# CLI audio playback + terminal input (behind "cli" feature)
rodio = { version = "0.20", optional = true }
crossterm = { version = "0.28", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
ctrlc = { version = "3", optional = true }

[dev-dependencies]
approx = "0.5"
tempfile = "3"
tracing-subscriber = "0.3"

[features]
default = ["cuda"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
cudnn = ["cuda", "candle-core/cudnn"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
cli = ["dep:rodio", "dep:crossterm", "dep:tracing-subscriber", "dep:ctrlc"]

[[example]]
name = "stream_cli"
required-features = ["cli"]

[[example]]
name = "stream_daemon"
required-features = ["cli"]
