[package]
name = "ace-step-rs"
version = "0.2.0"
edition = "2024"
description = "ACE-Step v1.5 music generation in pure Rust via candle"
license = "MIT"
repository = "https://github.com/marenz/ace-step-rs"

[dependencies]
# ML framework (local candle fork with matmul+col2im ConvTranspose1d + optional cuDNN)
candle-core = { path = "/home/marenz/repos/candle/candle-core" }
candle-nn = { path = "/home/marenz/repos/candle/candle-nn" }
candle-transformers = { path = "/home/marenz/repos/candle/candle-transformers" }

# Tokenization (Qwen3 tokenizer)
tokenizers = "0.21"

# Audio I/O
hound = "3.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"

# Random number generation
rand = "0.9"

# Model downloads
hf-hub = "0.4"

# Float16
half = "2"

# CUDA runtime (VRAM queries) — only used when the cuda feature is enabled
cudarc = { version = "0.19.1", features = ["runtime", "cuda-version-from-build-system", "dynamic-linking"], optional = true }

# Numerical traits
num-traits = "0.2"

# Zip archive reading (for loading .pt files)
zip = "2"

# Async runtime (GenerationManager uses tokio channels + spawn_blocking)
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros", "net", "io-util"] }

# XDG base directories (for spool path)
dirs = "5"

# CLI argument parsing (binary only)
clap = { version = "4", features = ["derive"] }
anyhow = "1"

# Logging output
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI audio playback + terminal input (behind "cli" feature)
rodio = { version = "0.20", optional = true }
cpal = { version = "0.15", optional = true }
ringbuf = { version = "0.4", optional = true }
crossterm = { version = "0.28", optional = true }
ctrlc = { version = "3", optional = true }

[dev-dependencies]
approx = "0.5"
tempfile = "3"

[features]
default = ["cuda"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda", "dep:cudarc"]
cudnn = ["cuda", "candle-core/cudnn"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
cli = ["dep:rodio", "dep:cpal", "dep:ringbuf", "dep:crossterm", "dep:ctrlc"]

# Optional audio encoding
audio-ogg = ["dep:vorbis_rs"]
audio-mp3 = ["dep:mp3lame-encoder"]
audio-all = ["audio-ogg", "audio-mp3"]

[target.'cfg(not(all(target_os = "windows", target_arch = "aarch64")))'.dependencies]
vorbis_rs = { version = "0.5", optional = true }

[dependencies.mp3lame-encoder]
version = "0.2"
optional = true

[[example]]
name = "radio_daemon"
required-features = ["cli"]

[[bin]]
name = "generation-daemon"
path = "src/bin/generation-daemon.rs"
required-features = ["audio-ogg"]
